--- a/css/contacts.css
+++ b/css/contacts.css
@@ -43,11 +43,20 @@ nav {
   height: 65px;
   width: 100%;
   grid-template-columns: 10em 10em 10em 25em 28em;
+
+}
+
+.nav-links li a:hover {
+  color: #FD7014;
 }
 
 .nav-links {
   width: 400px;
   display: contents;
+}
+
+.nav-link:hover {
+  color: #FD7014;
 }
 
 .nav-links li {
@@ -63,6 +72,7 @@ nav {
   font-size: 20px;
   color: #222831;
   align-items: center;
+  transition-duration: 0.4s;
 }
 
 #logo {
@@ -94,9 +104,10 @@ nav {
   display: grid;
   text-align: center;
   box-sizing: border-box;
-  font-size: 25px;
+  font-size: 20px;
   color: #222831;
   align-items: center;
+  transition-duration: 0.4s;
 }
 
 /*Header (END)*/
@@ -150,6 +161,11 @@ nav {
   letter-spacing: -1px;
   transform: rotate(180deg);
   writing-mode: vertical-rl;
+  transition-duration: 0.4s;
+}
+
+.footer-element-onTop:hover {
+  color: #222831;
 }
 
 /*Footer (END)*/
@@ -191,7 +207,7 @@ nav {
   align-items: center;
   padding: 4em;
   justify-items: center;
-  grid-template-columns: 45em 45em;
+  grid-template-columns: 33em 33em 33em;
   min-height: 38.4375em;
 }
 
@@ -231,14 +247,15 @@ nav {
 .author-logo {
   height: 8.375em;
   width: 8.375em;
+  margin-top: 45px;
   background-color: #222831;
-  margin-top: 3.25em;
   border-radius: 15em;
 }
 
 #author-logo-0 {
   height: 8.375em;
   width: 8.375em;
+  margin-top: 45px;
   border-radius: 15em;
   content: url(../img/autor-logo-0.jpg);
 }
@@ -246,6 +263,7 @@ nav {
 #author-logo-1 {
   height: 8.375em;
   width: 8.375em;
+  margin-top: 45px;
   border-radius: 15em;
   content: url(../img/autor-logo-1.jpg);
 }
@@ -254,6 +272,7 @@ nav {
 #author-logo-2 {
   height: 8.375em;
   width: 8.375em;
+  margin-top: 45px;
   border-radius: 15em;
   content: url(../img/autor-logo-4.jpg);
 }
@@ -261,6 +280,7 @@ nav {
 #author-logo-3 {
   height: 8.375em;
   width: 8.375em;
+  margin-top: 45px;
   border-radius: 15em;
   content: url(../img/autor-logo-2.jpg);
 }
@@ -269,6 +289,7 @@ nav {
 #author-logo-4 {
   height: 8.375em;
   width: 8.375em;
+  margin-top: 45px;
   border-radius: 15em;
   content: url(../img/autor-logo-3.jpg);
 }
@@ -276,6 +297,7 @@ nav {
 #author-logo-5 {
   height: 8.375em;
   width: 8.375em;
+  margin-top: 45px;
   border-radius: 15em;
   content: url(../img/autor-logo-NONE.jpg);
 }
@@ -327,7 +349,137 @@ nav {
   margin-bottom: 0em;
 }
 
-.status_bar_a {
+#Name {
+  width: 25em;
+  height: 4em;
+  padding: 22px;
+  box-shadow: 0em 0em 1em 0.1em #222831;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  margin-top: 1em;
+  border-radius: 1em;
+  color: #222831;
+  letter-spacing: 0;
+  background: #EEEEEE;
+  resize: none;
+}
+
+#Email {
+  width: 25em;
+  height: 4em;
+  padding: 22px;
+  box-shadow: 0em 0em 1em 0.1em #222831;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  margin-top: 1em;
+  border-radius: 1em;
+  color: #222831;
+  letter-spacing: 0;
+  background: #EEEEEE;
+  resize: none;
+}
+
+#Message {
+  width: 25em;
+  height: 10em;
+  padding: 1em;
+  box-shadow: 0em 0em 1em 0.1em #222831;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  margin-top: 1em;
+  border-radius: 1em;
+  color: #222831;
+  letter-spacing: 0;
+  background: #EEEEEE;
+  resize: none;
+}
+
+#fcf-form-id {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#fcf-button {
+  margin: 2em;
+  border: none;
+  height: 3em;
+  width: 10em;
+  height: 3em;
+  width: 12em;
+  background: #222831;
+  box-shadow: 0em 0em 1em 0.1em #222831;
+  border-radius: 83px;
+  box-sizing: border-box;
+  color: #EEEEEE;
+  letter-spacing: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-align: center;
+  transition-duration: 0.4s;
+}
+
+#fcf-button:hover {
+  background: #393E46;
+  box-shadow: 0em 0em 1em 0.1em #FD7014;
+  color: #EEEEEE;
+}
+
+#group-1 {
+  min-height: 38.4375em;
+  display: grid;
+  justify-content: center;
+  flex-wrap: nowrap;
+  grid-template-columns: 20em 30em 20em;
+  padding: 2em;
+}
+
+#group-1-0 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+}
+
+#group-1-1 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+}
+
+#group-1-6 {
+  display: flex;
+  width: 30em;
+  height: 38em;
+  box-shadow: 0em 0em 1em 0.1em #222831;
+  border-radius: 50px;
+  flex-direction: column;
+  transition: all .2s;
+  align-content: center;
+  align-items: center;
+  color: #222831;
+}
+
+#group-1-6 h1 {
+  box-sizing: border-box;
+  color: #FD7014;
+  letter-spacing: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-align: left;
+}
+
+#group-1-6 p {
   box-sizing: border-box;
   color: #222831;
   letter-spacing: 0;
@@ -336,43 +488,55 @@ nav {
   text-align: left;
 }
 
-.status_bar {
-  height: 1em;
-  width: 25.9375em;
-  background-color: #222831;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  border-radius: 2.25em;
+.button {
+  width: 10em;
+  height: 3em;
+  box-shadow: 0em 0em 0em 0.1em #222831;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  margin-top: 1.8em;
+  border-radius: 5em;
+  transition-duration: 0.4s;
 }
 
-.status_bar div {
-  background-color: #FD7014;
-  height: 100%;
-  border-radius: 2.25em;
+.button a {
+  box-sizing: border-box;
+  color: #222831;
+  letter-spacing: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding: 1em;
+  height: 3em;
+  width: 10em;
+  text-align: center;
+  text-align-last: center;
+  text-decoration: none;
+  transition-duration: 0.4s;
 }
 
-#skills-0 {
-  margin-top: 20px;
+.button:hover {
+  box-shadow: 0em 0em 0em 0.1em #FD7014;
 }
 
-#skills-1 {
-  margin-top: 20px;
+.button a:hover {
+  color: #FD7014;
 }
 
-#skills-2 {
-  margin-top: 20px;
+.table {
+  margin: 2em;
+  display: flex;
+  width: 15em;
+  height: 30em;
+  box-shadow: 0em 0em 1em 0.1em #222831;
+  align-items: center;
+  justify-items: center;
+  border-radius: 50px;
+  flex-direction: column;
+  justify-content: start;
+  align-content: center;
+  transition: all .2s;
 }
-
-#skills-3 {
-  margin-top: 20px;
-}
-
-#skills-4 {
-  margin-top: 20px;
-}
-#skills-5{
-  margin-top: 20px;
-}
-
 
 /*body elements (END)*/
