--- a/css/main_page.css
+++ b/css/main_page.css
@@ -43,11 +43,20 @@ nav {
   height: 65px;
   width: 100%;
   grid-template-columns: 10em 10em 10em 25em 28em;
+
+}
+
+.nav-links li a:hover {
+  color: #FD7014;
 }
 
 .nav-links {
   width: 400px;
   display: contents;
+}
+
+.nav-link:hover {
+  color: #FD7014;
 }
 
 .nav-links li {
@@ -63,6 +72,7 @@ nav {
   font-size: 20px;
   color: #222831;
   align-items: center;
+  transition-duration: 0.4s;
 }
 
 #logo {
@@ -97,6 +107,7 @@ nav {
   font-size: 20px;
   color: #222831;
   align-items: center;
+  transition-duration: 0.4s;
 }
 
 /*Header (END)*/
@@ -150,6 +161,11 @@ nav {
   letter-spacing: -1px;
   transform: rotate(180deg);
   writing-mode: vertical-rl;
+  transition-duration: 0.4s;
+}
+
+.footer-element-onTop:hover {
+  color: #222831;
 }
 
 /*Footer (END)*/
@@ -298,16 +314,14 @@ nav {
 }
 
 .introduction-part-4 {
-  align-items: center;
-  align-content: center;
-  flex-flow: row nowrap;
-  text-indent: 100px;
-  justify-content: center;
   width: 100%;
+  height: 25em;
   display: grid;
-  padding: 0px 20%;
-  top: 1400px;
-  letter-spacing: -1px;
+  grid-template-columns: 80em;
+  align-items: center;
+  padding: 0px 7%;
+  flex-flow: row nowrap;
+  justify-content: center;
 }
 
 #introduction-text-4-a {
@@ -358,6 +372,11 @@ nav {
   color: #FD7014;
   font-weight: 100;
   font-size: 1.5em;
+  transition-duration: 0.4s;
+}
+
+.group-3-title:hover{
+  color: #222831;
 }
 
 .group-3-text {
